Phase 51 - ベースファイルを変更　7.xに基づいた大量のバグを修正